--- a/src/__new/js/view/widgets/CustomViewsWidget/DataviewCard/DataviewCard.css
+++ b/src/__new/js/view/widgets/CustomViewsWidget/DataviewCard/DataviewCard.css
@@ -8,8 +8,8 @@
 	border-bottom: 2px solid #ddd;
 	border-top: 1px solid #ccc;
 	margin: .5rem;
-	max-width: 15rem;
-	min-width: 10rem;
+	max-width: 20rem;
+	min-width: 12rem;
 	padding-bottom: .5rem;
 	width: 30%;
 	transition: background .3s ease-in-out, box-shadow .3s ease-in-out;
@@ -101,5 +101,15 @@
 		width: 1.6rem;
 		height: 1.6rem;
 		font-size: .95rem;
+	}
+}
+@media (max-width: 850px) {
+	.dataview-card {
+		width: 20rem;
+	}
+}
+@media (max-height: 650px) {
+	.dataview-card {
+		width: 20rem;
 	}
 }
