--- a/src/css/newDesign.css
+++ b/src/css/newDesign.css
@@ -338,7 +338,10 @@
 }
 
 /* intro toolbar inputs */
-.newDesign #content-intro table:hover .x-form-text, .newDesign #content-intro table:hover .x-form-trigger {
+.newDesign #content-intro table:hover .x-form-text,
+.newDesign #content-intro table:hover .x-form-trigger,
+.newDesign #content-intro .x-form-trigger,
+.newDesign #content-intro .custom-combo .x-form-text {
 	background-color: rgba(255, 255, 255, .15);
 }
 
@@ -347,14 +350,12 @@
 }
 
 .newDesign #content-intro .x-form-trigger {
-	background: rgba(255, 255, 255, .15);
 	border: 0;
 }
 
 .newDesign #content-intro .custom-combo .x-form-text {
 	border-radius: 1px 0 0 1px;
 	color: rgb(204,207,211);
-	background: rgba(255, 255, 255, .15);
 	border: 0;
 	border-right: 0;
 	font-size: .85rem;
@@ -492,10 +493,6 @@
 	transition: background-color .3s ease-out;
 }
 
-.newDesign .app-legacy-view-selector-help .help-btn .x-btn:hover {
-	background-color: rgba(255, 255, 255, .15);
-}
-
 .newDesign #app-legacy-view-selector-contexthelp span.x-btn-icon {
 	background: url('../images/new/help-context-white.png') no-repeat 50% 50% !important;
 }
@@ -623,7 +620,7 @@
 }
 
 .newDesign.x-border-box .x-form-trigger {
-	background: #eee url("../images/new/expand.png") no-repeat 50% 50%;
+	background: none;
 	border-radius: 0 1px 1px 0;
 	border-left: 0;
 }
@@ -642,22 +639,34 @@
 
 .newDesign.x-border-box .x-form-trigger.x-form-refresh-trigger {
 	transition: background .3s ease-out;
-	background: rgba(255, 255, 255, .15);
 	border-left: 1px solid rgba(255, 255, 255, .1) !important;
 }
 
-.newDesign.x-border-box .x-form-trigger.x-form-spinner-up {
-	background: #eee url("../images/new/collapse.png") no-repeat 50% 50%;
+.newDesign .app-legacy-view-selector-help .help-btn .x-btn:hover,
+.newDesign.x-border-box .x-form-trigger.x-form-refresh-trigger,
+.newDesign.x-border-box .custom-combo .x-form-text,
+.newDesign.x-border-box .custom-combo .x-form-trigger,
+.newDesign .x-btn.custom-button.x-btn-default-small,
+.newDesign .x-btn.custom-button.x-btn-default-small:hover {
+	background: rgba(255, 255, 255, .15);
+}
+.newDesign.x-border-box .custom-combo:hover .x-form-text,
+.newDesign.x-border-box .custom-combo:hover .x-form-trigger,
+.newDesign.x-border-box .custom-combo:hover .x-form-trigger.x-form-refresh-trigger {
+	background: rgba(255, 255, 255, .2) !important;
 }
 
-.newDesign.x-border-box .x-tbar-loading {
-	background: #eee url("../images/new/refresh-small.png") no-repeat 50% 50% !important;
-}
+/*.newDesign.x-border-box .x-form-trigger.x-form-spinner-up {*/
+	/*background: none;*/
+/*}*/
+
+/*.newDesign.x-border-box .x-tbar-loading {*/
+	/*background: none !important;*/
+/*}*/
 
 .newDesign.x-border-box .custom-combo .x-form-text {
 	border-radius: 1px 0 0 1px;
 	color: rgb(204,207,211);;
-	background: rgba(255, 255, 255, .15);
 	border: 0;
 	border-right: 0;
 	font-size: .85rem;
@@ -667,7 +676,7 @@
 }
 
 .newDesign.x-border-box .custom-combo .x-form-trigger {
-	background: rgba(255, 255, 255, .15);
+	/*background: none;*/
 	border: 0;
 	border-left: 0;
 	border-radius: 0 1px 1px 0;
@@ -691,11 +700,6 @@
 .newDesign.x-border-box .custom-combo .x-form-refresh-trigger:before {
 	content: "\f021";
 	font-size: .85rem;
-}
-.newDesign.x-border-box .custom-combo:hover .x-form-text,
-.newDesign.x-border-box .custom-combo:hover .x-form-trigger,
-.newDesign.x-border-box .custom-combo:hover .x-form-trigger.x-form-refresh-trigger {
-	background-color: rgba(255, 255, 255, .15) !important;
 }
 
 .newDesign.x-border-box .x-tbar-page-number .x-form-text {
@@ -1001,16 +1005,11 @@
 	transition: background-color .3s ease-out;
 	display: inline-block;
 	vertical-align: middle;
-	background: rgba(255, 255, 255, .15);
 	border: 0;
 	border-radius: .05rem;
 	color: #ddd;
 	height: 26px;
 	line-height: 26px;
-}
-
-.newDesign .x-btn.custom-button.x-btn-default-small:hover {
-	background: rgba(255, 255, 255, .15);
 }
 
 .newDesign .x-btn.custom-button.x-btn-default-small.x-disabled {
