--- a/src/__new/js/view/widgets/InfoWidget/snowInfo.html
+++ b/src/__new/js/view/widgets/InfoWidget/snowInfo.html
@@ -1,3 +1,8 @@
+<h3>About</h3>
+<p><a target="_blank" href="http://www.gisat.cz/content/en">Gisat s.r.o.</a> provides its clients with a wide range of state-of-the-art, high quality, value added, and complete geoinformation services based on the Earth Observation technology</p>
+<p>Gisat is the developer and the owner of the Snow Portal.</p>
+<p>Snow Portal has been developed to support the <a href="https://www.eea.europa.eu/" target="_blank">European Environment Agency (EEA)</a> in their decisions related to the future European Snow & Ice Cover Monitoring Service being evolved within the Copernicus programme. It shall also support many other international users and serve other purposes worldwide."</p>
+
 <h3>Registration</h3>
 <p>If you wish to save performed searches and configurations please register by clicking on the ‘Sign up’ button on the main page (top right corner). </p>
 
