--- a/src/__new/styles/projects.css
+++ b/src/__new/styles/projects.css
@@ -33,7 +33,8 @@ html.dromas .about-window-header-title {
    =================================================== */
 
 /* Intro overlay */
-.urban-tep #floater-custom-views-widget.intro-overlay .floater-body {
+.urban-tep #floater-custom-views-widget.intro-overlay .floater-body,
+.urban-tep #floater-custom-views-widget.intro-overlay .floater-overlay {
 	background-image: linear-gradient(160deg, rgba(65,69,81,1) 0%, rgba(65,69,81,1) 40%, rgba(106,110,120,1) 100%);
 }
 .urban-tep .custom-views-category:hover {
