--- a/src/__new/js/view/widgets/CustomViewsWidget/AboutWindow/AboutWindow.css
+++ b/src/__new/js/view/widgets/CustomViewsWidget/AboutWindow/AboutWindow.css
@@ -15,7 +15,7 @@
 ========= MEDIA QUERIES =============
 ===================================== */
 #about-window {
-	height: 100%;
+	min-height: 100%;
 	overflow-x: hidden;
 	display: flex;
 	flex-direction: column;
@@ -90,8 +90,9 @@
 
 /* Text section */
 .about-window-text {
-	padding: 2rem 3rem;
+	padding: 2rem 3rem 1rem;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	flex: 1;
@@ -102,6 +103,7 @@
 	color: rgb(65,69,81);
 	text-align: center;
 	max-width: 40rem;
+	margin-bottom: 1rem;
 }
 
 /* Footer */
