--- a/src/css/newDesign.css
+++ b/src/css/newDesign.css
@@ -10,6 +10,12 @@
 		* Buttons........................Ext buttons
 			* Default small button
 			* Login window buttons
+		* Checkbox.......................checkbox adjustments
+		* Grids..........................Ext grids
+			* Attribute container........declarations for table with attributes (chart or choropleth creation)
+		* Charts.........................declarations for panel with charts
+			* Common panel parts
+			* Sidebar charts
 
 	* COMMON LAYOUT COMPONENTS
 		* Header.........................declarations of header toolbars
@@ -35,11 +41,6 @@
 	border-top: 2px solid #ddd !important;
 	background: rgba(233,235,237,1);
 	padding: 1rem;
-}
-.newDesign .x-window .x-grid .x-toolbar-default.x-docked-top {
-	background: #CFCFD3;
-	margin-bottom: 5px !important;
-	border-bottom: 0 !important;
 }
 
 /* window header */
@@ -67,6 +68,12 @@
 .newDesign .legend-window .x-tool-close,
 .newDesign .x-window-header .x-tool-close {
 	background: url("../images/new/close.png") no-repeat 50% 50% !important;
+	transition: background .3s ease-in-out;
+}
+.newDesign .x-tool-close:hover,
+.newDesign .legend-window .x-tool-close:hover,
+.newDesign .x-window-header .x-tool-close:hover {
+	background: rgba(234,237,241,1) url("../images/new/close.png") no-repeat 50% 50% !important;
 }
 
 /* Window body */
@@ -179,7 +186,7 @@
 /* help */
 .newDesign .configform .form-label-help {
 	position: absolute;
-	right: 0;
+	right: 10px;
 }
 
 .newDesign .configform .form-label-help i {
@@ -220,8 +227,55 @@
 	display: block;
 }
 
-/* === Buttons ========================================= */
+/* === Checkbox ========================================= */
+.newDesign .tree-column-label,
+.newDesign .tree-root-label {
+	display: inline-block;
+	font-size: .85rem;
+}
+.newDesign .tree-column-label:before,
+.newDesign .x-grid-checkheader:before {
+	content: "\f096";
+	font-family: FontAwesome;
+	font-size: 1rem;
+	display: inline-block;
+	vertical-align: middle;
+	margin: 0 .3rem 0 0;
+}
+.newDesign .x-tree-checked .tree-column-label:before,
+.newDesign .x-grid-checkheader-checked:before {
+	content: "\f14a";
+	color: rgb(186,65,91);
+}
+.newDesign .x-grid-checkheader:before,
+.newDesign .x-grid-checkheader-checked:before {
+	position: absolute;
+}
+.newDesign .x-tree-checkbox {
+	background: none;
+	cursor: pointer;
+	width: 0;
+	height: 16px;
+}
+.newDesign .x-tree-checkbox-checked {
+	background: none;
+}
+.newDesign .x-grid-checkheader {
+	background: none;
+	cursor: pointer;
+	margin-top: 0;
+	text-align: center;
+}
+.newDesign .x-column-header-inner .x-grid-checkheader {
+	margin-top: 2px;
+}
+.newDesign .x-grid-checkheader-checked {
+	background: none;
+	cursor: pointer;
+	text-align: center;
+}
 
+/* === Buttons ========================================= */
 /* Default small button */
 .newDesign .x-btn-default-small {
 	background: none;
@@ -318,6 +372,101 @@
 	color: rgb(33,38,53);
 }
 
+/* === Grids =========================================== */
+.newDesign .x-grid-body {
+	border: 0 !important;
+	margin-top: 3px;
+}
+
+/* Attribute container */
+.newDesign .x-window .attribute-container .x-grid {
+	border: 1px solid rgba(204,207,211,1);
+}
+.newDesign .x-window .attribute-container .x-grid .x-toolbar-default.x-docked-top {
+	/*background: rgba(65,69,81,1);*/
+	margin-bottom: 0 !important;
+	border-bottom: 0 !important;
+}
+.newDesign .x-window .attribute-container .x-grid-cell-inner {
+	font-size: .85rem;
+}
+.newDesign .x-window .attribute-container .x-grid-header-ct .x-box-inner {
+	border-top: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
+}
+.newDesign .x-window .attribute-container .x-panel-body-default {
+	margin-top: 5px;
+}
+/*.newDesign .attribute-container .x-column-header {*/
+	/*border: 0;*/
+	/*background: rgba(65,69,81,1);*/
+/*}*/
+/*.newDesign .attribute-container .x-grid-header-ct span {*/
+	/*color: white;*/
+/*}*/
+
+/* Attribute configuration */
+.newDesign .attribute-configuration {
+	border: 1px solid rgba(204,207,211,1);
+}
+.newDesign .attribute-configuration .x-panel-header,
+.newDesign .attribute-configuration .x-panel-body {
+	padding: 0 5px !important;
+}
+.newDesign .attribute-configuration .x-panel-header span {
+	color: rgb(65,69,81);
+	font-size: 1rem;
+	font-weight: 500;
+}
+
+/* === Charts ========================================= */
+.newDesign #app-reports-paging {
+	border-bottom: 0;
+}
+/* Common panel parts */
+.newDesign .x-panel-header {
+	background: rgba(233,235,237,1);
+	border-bottom: 0;
+}
+.newDesign .x-panel-header-text-default {
+	font-size: .9rem;
+	font-weight: 400;
+	color: rgb(65,69,81);
+}
+
+/* Sidebar charts */
+.newDesign #app-reports-accordeon .x-panel-header {
+	background: rgba(204,207,211,1) !important;
+	transition: background .3s ease-in-out;
+}
+.newDesign #app-reports-accordeon .x-panel-header:hover {
+	background: rgba(204,207,211,.8) !important;
+}
+
+/* Tables */
+.newDesign .x-toolbar-item:hover {
+	background: rgba(204,207,211,1);
+	transition: background .3s ease-in-out, border .3s ease-in-out;
+}
+.newDesign .x-toolbar-item .x-btn-inner {
+	font-size: .85rem;
+}
+.newDesign .x-column-header {
+	background: #FCFCFA;
+	border-color: #ddd;
+}
+.newDesign .x-column-header-inner {
+	transition: background .3s ease-in-out;
+}
+.newDesign .x-column-header-over {
+	background: rgba(224,227,231,.8);
+}
+.newDesign .x-column-header-text {
+	font-size: .85rem;
+}
+.newDesign .x-grid-header-ct {
+	border: 1px solid #ddd;
+}
 
 /* =====================================================
 === COMMON LAYOUT COMPONENTS ===========================
@@ -887,7 +1036,7 @@
 }
 
 /* === Box === */
-.newDesign #app-reports-paging, #app-tools-actions, #maptools-1059 {
+#app-tools-actions, #maptools-1059 {
 	border-bottom: 1px solid #ddd;
 }
 
@@ -925,16 +1074,6 @@
 	border: 0;
 }
 
-.newDesign .x-panel-header {
-	background: #ddd !important;
-	border-bottom: 1px solid white;
-	transition: background .3s ease-out;
-}
-
-.newDesign .x-panel-header:hover {
-	background: #d3d3d3 !important;
-}
-
 .newDesign .x-accordion-hd .x-tool-over .x-tool-collapse-top {
 	background-position: 50% 50%;
 }
@@ -963,24 +1102,15 @@
 	border: 0;
 }
 
-.newDesign .x-grid-header-ct {
-	border: 1px solid #ddd !important;
-}
+/*.newDesign .x-column-header {*/
+	/*background: #eee;*/
+	/*border: 0;*/
+/*}*/
 
-.newDesign .x-column-header {
-	background: #eee;
-	border: 0;
-}
-
-.newDesign .x-column-header-over {
-	background: #ddd;
-	border: 0;
-}
-
-.newDesign .x-grid-body {
-	border: 1px solid #ddd !important;
-	border-top: 0 !important;
-}
+/*.newDesign .x-column-header-over {*/
+	/*background: #ddd;*/
+	/*border: 0;*/
+/*}*/
 
 .newDesign .x-tree-panel .x-grid-header-ct {
 	border: 0 !important;
@@ -1224,33 +1354,6 @@
 
 .newDesign .x-btn.btn-map-tool:focus, .newDesign .x-btn.btn-map-tool:hover, .newDesign .x-btn.btn-snapshot:hover, .newDesign .x-btn.btn-map-select:hover {
 	background: #eee;
-}
-
-/* Checkbox ========== */
-.newDesign .x-grid-checkheader {
-	background-image: url('../images/new/unchecked.png');
-	background-position: 50% 0;
-	height: 16px;
-}
-
-.newDesign .x-grid-checkheader-checked {
-	background-image: url('../images/new/checked.png');
-}
-
-.newDesign .x-tree-checkbox {
-	background-image: url('../images/new/unchecked.png');
-	margin-top: 2px;
-	width: 16px;
-	height: 16px;
-}
-
-.newDesign .x-tree-checkbox-checked {
-	background-image: url('../images/new/checked.png');
-}
-
-.newDesign .x-tree-checkbox:hover,
-.newDesign .x-tree-checkbox-checked:hover {
-	cursor: pointer;
 }
 
 /* Slider ======== */
